# leptos_charts

./: .gitignore  Cargo.toml  rustfmt.toml
app/: Cargo.toml
app/src/: lib.rs
app/src/charts/: bar_chart.rs  line_chart.rs  mod.rs
app/src/components/: auth_component.rs  chart_component.rs  data_control.rs  mod.rs
frontend/: Cargo.toml
server/src/: fileserv.rs  main.rs
