[package]
name = "app"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib", "rlib", "bin"]

# [profile.release]
# inherits = "dev"  # Use "dev" for development, or "release" for release
# opt-level = 'z'
# lto = true
# codegen-units = 1

# [profile.wasm-release]
# inherits = "release"
# opt-level = 'z'
# lto = true
# codegen-units = 1

# [package.metadata.leptos]
# lib-profile-release = "wasm-release"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Add any other dependencies common to all targets
# [dependencies]
# [workspace.dependencies]

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
plotters.workspace = true
plotters-canvas.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
polars.workspace = true
anyhow.workspace = true
clippy.workspace = true
# tracing.workspace = true
# tracing_subscriber.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]

